package v62.tp;
import "sys/Common.proto";
import "v62/FPTData.proto";

option java_package = "nirvana.hall.protocol.v62.tp";
option java_outer_classname = "TPCardAddProto";


message TPCardAddRequest{
    extend sys.BaseRequest{
        optional TPCardAddRequest cmd = 9001;
    }
    required TPCard card = 1;
}

message TPCardAddResponse{
    extend sys.BaseResponse{
        optional TPCardAddResponse cmd = 9001;
    }
}